--- a/test-admin-auth.html
+++ b/test-admin-auth.html
@@ -95,8 +95,8 @@
     </div>
 
     <script>
-        const FUNCTIONS_URL = 'https://lblcjyeiwgyanadssqac.functions.supabase.co';
-        const ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxibGNqeWVpd2d5YW5hZHNzcWFjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzAzNjMzMDQsImV4cCI6MjA0NTkzOTMwNH0.Dxe6u7ukJB_4djQurriZm5dIlffCu-yPl_oRNpUNypo';
+        const FUNCTIONS_URL = 'https://acqdzxnfpnwrhvatfzov.functions.supabase.co';
+        const ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFjcWR6eG5mcG53cmh2YXRmem92Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzMzM4NzUsImV4cCI6MjA3NTkwOTg3NX0.Swfpu8xLlw6LemgANJb3RAmgxkJICM9Lr4npicHneyg';
 
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
