feat: update Supabase URLs and keys for consistency across the application

--- a/test-admin-auth.html
+++ b/test-admin-auth.html
@@ -95,8 +95,8 @@
     </div>
 
     <script>
-        const FUNCTIONS_URL = 'https://acqdzxnfpnwrhvatfzov.functions.supabase.co';
-        const ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFjcWR6eG5mcG53cmh2YXRmem92Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzMzM4NzUsImV4cCI6MjA3NTkwOTg3NX0.Swfpu8xLlw6LemgANJb3RAmgxkJICM9Lr4npicHneyg';
+        const FUNCTIONS_URL = 'https://woerqhgdmwhggmwhyieh.functions.supabase.co';
+        const ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndvZXJxaGdkbXdoZ2dtd2h5aWVoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUzMzExNzIsImV4cCI6MjA4MDkwNzE3Mn0.uqHlBulaku6iewisnQjoF_80R7gqlL9jXj3_Te3-wEE';
 
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
